# vsdlib

./: .gitignore  .gitlab-ci.yml  Makefile  Makefile.am  Pipfile  README.md  configure.ac  example.toml  pyproject.toml  violetdeck.py
docker/: Dockerfile
ebuilds/: vsdlib-0.1.ebuild
ebuilds/acct-group/: vsdlib-0.ebuild
ebuilds/acct-user/: vsdlib-0.ebuild
tests/: elitedangerous.toml
vsdlib/: board.py  button_style.py  buttons.py  colors.py  control.py  images.py  layouts.py  main.py  toml_loader.py  utils.py  widgets.py
vsdlib/contrib/: quicksilver.py  todos.py
