[tool.poetry]
name = "vsdlib"
version = "0.1.0"
description = ""
authors = ["Violet Eldridge <github@violet-mica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamdeck = { git = "git@github.com:abcminiuser/python-elgato-streamdeck.git", tag = "0.9.4" }
beautifulsoup4 = "*"
emoji = "*"
sqlalchemy = "*"
pyalsaaudio = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
